push sqlite to disk to configure csv dump

--- a/data_push_to_sqlite_vs_pickle.ipynb
+++ b/data_push_to_sqlite_vs_pickle.ipynb
@@ -114,7 +114,7 @@
         "\n",
         "# Assuming 'conn' from the previous code is still available\n",
         "\n",
-        "conn1 = sqlite3.connect(':memory:')  # Use in-memory database\n",
+        "conn1 = sqlite3.connect('test.db')  # Use file based db to push data to csv later\n",
         "cursor = conn1.cursor()\n",
         "\n",
         "# Create a new table named 'housing_data' if it doesn't exist\n",
